# NanoDeploy

./: .clangd  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
DLSlime/: CMakeLists.txt  MANIFEST.in  README.md  README_zh.md  pyproject.toml
DLSlime/bench/python/: agg_transfer_bench_spmd.py  dlslime_torch_dist_sendrecv_bench.py  endpoint_io_bench.py  endpoint_sendrecv_bench.py  transfer_bench.py
DLSlime/bench/results/: AA.csv  AB_affi.csv  AC_affi.csv  A_D_affi.csv  BA_affi.csv  BB.csv  BC_affi.csv  B_D_affi.csv  CA_affi.csv  CB_affi.csv  CC.csv  C_D_affi.csv  D_A_affi.csv  D_B_affi.csv  D_C_affi.csv  D_D_affi.csv
DLSlime/cmake/: dlslimeConfig.cmake.in  torch.cmake  utils.cmake
DLSlime/dlslime/: __init__.py  peer_agent.py
DLSlime/dlslime/csrc/: CMakeLists.txt  env.h  jring.h  logging.h  utils.h
DLSlime/dlslime/csrc/device/: CMakeLists.txt  device_api.h  device_future.h
DLSlime/dlslime/csrc/engine/: CMakeLists.txt  assignment.cpp  assignment.h
DLSlime/dlslime/csrc/python/: CMakeLists.txt  bind.cpp
DLSlime/dlslime/csrc/torch/: CMakeLists.txt  slime_backend.cpp  slime_backend.h
DLSlime/dlslime/utils/: json_merge_manually.py  json_merger.py
DLSlime/docs/: README.md  roadmap.md
DLSlime/docs/huawei_ascend/: README.md
DLSlime/examples/python/: p2p_ascend_read.py  p2p_nvlink.py  p2p_rdma_multi_agents_ctrl_plane.py  p2p_rdma_rc_read.py  p2p_rdma_rc_read_ctrl_plane.py  p2p_rdma_rc_send_recv_gdr.py  p2p_rdma_rc_send_recv_torch.py  p2p_rdma_rc_write.py  p2p_rdma_rc_write_with_imm_data.py  test_rdma_read_offset.py
DLSlime/scripts/: build_and_twine_wheel.sh  gen_stubs.sh
DLSlime/tests/cpp/: CMakeLists.txt  jring_test.cpp
DLSlime/tests/cpp/ascend_direct/: CMakeLists.txt  README_ENDPOINT.md  ascend_direct_perf.cpp  ascend_endpoint_perf.cpp
DLSlime/tests/python/ops/: receiver.py  sender.py
NanoCommon/: CMakeLists.txt
NanoCommon/include/nanocommon/: jring.h  jring_elem_private.h  logging.h  utils.h
NanoCommon/include/nanocommon/pybind_json/: pybind_json.hpp
NanoCtrl/: Cargo.toml  README.md  config.toml  pyproject.toml
NanoCtrl/lua/: heartbeat_engine.lua  register_engine.lua  unregister_engine.lua
NanoCtrl/nanoctrl/: __init__.py  client.py
NanoCtrl/scripts/: build_and_twine_wheel.sh
NanoCtrl/src/: config.rs  error.rs  main.rs  models.rs  net.rs  redis_repo.rs  state.rs
NanoCtrl/src/handlers/: engine.rs  mod.rs  peer.rs  rdma.rs  util.rs
NanoDeploy/: CMakeLists.txt  README.md  pyproject.toml
NanoDeploy/bench/: bench_prefill.py
NanoDeploy/docs/: caching-system.md  chunk-prefill.md
NanoDeploy/docs/blogs/: nanodeploy-engine.md  nanodeploy-mtp.md  nanodeploy-nsa.md
NanoDeploy/examples/: disagg.py  non_disagg.py
NanoDeploy/nanodeploy/: __init__.py  config.py  llm_component.py  logging.py  metrics.py  sampling_params.py
NanoDeploy/nanodeploy/_cpp/: __init__.py
NanoDeploy/nanodeploy/backends/: __init__.py  base_backend.py
NanoDeploy/nanodeploy/backends/gpu_generic/: __init__.py
NanoDeploy/nanodeploy/backends/hopper/: __init__.py
NanoDeploy/nanodeploy/context/: cache.py  context.py  distributed.py  embedding_pool.py  expert_context.py
NanoDeploy/nanodeploy/csrc/: CMakeLists.txt
NanoDeploy/nanodeploy/csrc/bind/: CMakeLists.txt  block_manager_binding.cpp  group_manager_binding.cpp  metric_binding.cpp  model_runner_binding.cpp  module.cpp  scheduler_binding.cpp  sequence_binding.cpp  sequence_binding.h  sequence_metric_binding.cpp  sequence_metric_binding.h
NanoDeploy/nanodeploy/csrc/cache/: CMakeLists.txt  block.cpp  block.h  block_manager.cpp  block_manager.h  gdn_state_manager.cpp  gdn_state_manager.h
NanoDeploy/nanodeploy/csrc/common/: types.h  xxhash.hpp
NanoDeploy/nanodeploy/csrc/engine/: CMakeLists.txt  serialization.cpp  serialization.h
NanoDeploy/nanodeploy/csrc/metrics/: CMakeLists.txt  sequence_metric.cpp  sequence_metric.h  server_metric.cpp  server_metric.h
NanoDeploy/nanodeploy/csrc/scheduler/: CMakeLists.txt  group_manager.cpp  group_manager.h  scheduler.cpp  scheduler.h  thread_pool.h
NanoDeploy/nanodeploy/csrc/sequence/: CMakeLists.txt  sequence.cpp  sequence.h  serialization.cpp  serialization.h
NanoDeploy/nanodeploy/csrc/worker/: CMakeLists.txt  model_runner_utils.cpp  model_runner_utils.h
NanoDeploy/nanodeploy/engine/: llm_engine.py  ray_executor.py  ray_utils.py
NanoDeploy/nanodeploy/layers/: embed_head.py  eplb.py  indexer.py  layernorm.py  local_dispatch.py  parallelism_transition.py  rotary_embedding.py  sampler.py  token_dispatcher.py
NanoDeploy/nanodeploy/models/: quant_config.py
NanoDeploy/nanodeploy/models/deepseek_v2/: deepseek_v2.py  deepseek_v2_loader.py  deepseek_v2_mtp.py  deepseek_v2_mtp_loader.py
NanoDeploy/nanodeploy/server/: engine_server.py  zmq_protocol.py
NanoDeploy/nanodeploy/worker/: graph_runner.py  input_preparer.py  loader.py  model_runner.py  mtp_worker.py  runner_config.py  vision_embed.py
NanoDeploy/scripts/: gen_stubs.sh
NanoDeploy/tests/: test_cache_fp8.py  test_fa.py  test_flash_attn3_causal.py  test_fp8_decode.py  test_fp8_quant.py  test_indexer.py  test_routing_config.py  test_sequence_proxy.py  test_serialization.py  test_serialization_size.py  test_serialization_standalone.py  test_sparse_decode.py  test_store_fp8.py
NanoDeployVL/: README.md  pyproject.toml
NanoDeployVL/examples/: test_encoder_engine.py  test_vl.py
NanoDeployVL/nanodeployvl/: __init__.py  config.py
NanoDeployVL/nanodeployvl/encoder/: encoder_config.py  encoder_engine.py
NanoDeployVL/nanodeployvl/server/: __init__.py  vl_engine_server.py
NanoDeployVL/nanodeployvl/vision/: __init__.py  encoder.py  processor.py
NanoRoute/: Cargo.toml  README.md  benchmark_string.py  build.rs  config.toml
NanoRoute/src/: check_api.rs  config.rs  encoder_adapter.rs  engine_adapter.rs  engine_manager.rs  engine_watcher.rs  fbs.rs  http_server.rs  lib.rs  main.rs  peer_type.rs  sequence_utils.rs  tokenizer.rs  tool_parser.rs  zmq_packet.rs
NanoSequence/: CMakeLists.txt  README.md  pyproject.toml
NanoSequence/proto/: interface.fbs  packet.fbs  sequence.fbs
(+81 files in other folders)
