[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nanoinfra"
version = "0.1.0"
description = "NanoInfra monorepo meta-package"
authors = [{ name = "DeepLink-MLSysResearch" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

# Install individual components:
#   pip install ".[nanoctrl]"
#   pip install ".[nanodeploy]"
#   pip install ".[nanodeployvl]"
#   pip install ".[all]"
[project.optional-dependencies]
nanoctrl = [
    "nanoctrl @ file:NanoCtrl",
]
nanodeploy = [
    "nanodeploy @ file:NanoDeploy",
]
nanodeployvl = [
    "nanodeployvl @ file:NanoDeployVL",
]
all = [
    "nanoctrl @ file:NanoCtrl",
    "nanodeploy @ file:NanoDeploy",
    "nanodeployvl @ file:NanoDeployVL",
]

[tool.setuptools]
# No Python packages to install from the root itself
py-modules = []
