[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "nanoctrl"
version = "0.1.0"
description = "Shared NanoCtrl lifecycle client for NanoInfra services"
requires-python = ">=3.10"
dependencies = ["httpx>=0.24"]

[tool.setuptools.packages.find]
where = ["."]
include = ["nanoctrl*"]
