[build-system]
requires = [
    "scikit-build-core>=0.10",
    "setuptools>=61",
    "cmake>=3.18",
    "pybind11>=2.12.0",
    "ninja",
]
build-backend = "scikit_build_core.build"

[project]
name = "nanodeploy"
version = "0.2.0"
authors = [{ name = "DeepLink-MLSysResearch" }]
license = "MIT"
readme = "README.md"
description = "a lightweight LMDeploy implementation built from scratch"
requires-python = ">=3.10,<3.14"
dependencies = [
    # "torch>=2.4.0",
    # "triton>=3.0.0",
    # "flash-attn",
    # "flashinfer",
    "pydantic",
    "pyzmq>=25.0",
    "httpx",
    "uvloop>=0.21.0",
    "ray>=2.50.1",
    "transformers>=4.51.0",
    "dlslime==0.0.3.rc1",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/nanodeploy-project/nano-deploy"

[tool.scikit-build]
# optional env variable:
# BUILD_TORCH_PLUGIN: OFF
# BUILD_NVLINK: OFF
# USE_MACA: OFF
cmake.args = ["-G Ninja", "-DNANODEPLOY_INSTALL_PATH=nanodeploy"]
cmake.build-type = "Release"

build-dir = "build"
