[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nanodeployvl"
version = "0.1.0"
description = "Vision-Language inference engine for NanoInfra"
requires-python = ">=3.10"
dependencies = [
    "nanodeploy",
    "torch",
    "transformers>=4.52.0",
    "Pillow",
    "safetensors",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "qwen-vl-utils",
]

[project.scripts]
nanodeployvl-serve = "nanodeployvl.server.vl_engine_server:main"

[tool.setuptools.packages.find]
include = ["nanodeployvl*"]
